@@ -24,21 +24,25 @@ public class GetHistoryService implements GetHistoryUseCase {
 
     @Override
     @Transactional(readOnly = true)
-    public HistorySummaryResponse getSummary () {
-
+    public HistorySummaryResponse getSummary() {
         long totalExams = historyRepository.countFinishedExams();
         long totalQuestionsAnswered = historyRepository.countTotalQuestionsAnswered();
         double averageScore = historyRepository.getAverageScore();
         double bestScore = historyRepository.getBestScore();
         double worstScore = historyRepository.getWorstScore();
 
-        List<Exam> recentExams = historyRepository.findRecentExams(5);
-        List<HistorySummaryResponse.RecentExamDto> recentExamDtos = recentExams.stream().map(this::toRecentExamDto)
-                .collect(Collectors.toList());
+        List<HistorySummaryResponse.RecentExamDto> recentExamDtos = historyRepository.findRecentExams(5).stream()
+                .map(this::toRecentExamDto)
+                .toList();
 
-        return HistorySummaryResponse.builder().totalExams((int) totalExams)
-                .totalQuestionsAnswered(totalQuestionsAnswered).averageScore(averageScore).bestScore(bestScore)
-                .worstScore(worstScore).recentExams(recentExamDtos).build();
+        return HistorySummaryResponse.builder()
+                .totalExams((int) totalExams)
+                .totalQuestionsAnswered(totalQuestionsAnswered)
+                .averageScore(averageScore)
+                .bestScore(bestScore)
+                .worstScore(worstScore)
+                .recentExams(recentExamDtos)
+                .build();
     }
 
     @Override
@@ -68,23 +72,18 @@ public class GetHistoryService implements GetHistoryUseCase {
 
     @Override
     @Transactional(readOnly = true)
-    public List<SubjectStatsResponse> getSubjectStats () {
-
-        List<Map<String, Object>> stats = historyRepository.getSubjectStats();
-        List<SubjectStatsResponse> responses = new ArrayList<>();
-
-        for (Map<String, Object> row : stats) {
-            SubjectStatsResponse response = SubjectStatsResponse.builder().subjectId((Long) row.get("subjectId"))
-                    .subjectName((String) row.get("subjectName"))
-                    .totalExams(((Number) row.get("totalExams")).intValue())
-                    .totalQuestions(((Number) row.get("totalQuestions")).intValue())
-                    .correctAnswers(((Number) row.get("correctAnswers")).intValue())
-                    .averageScore(((Number) row.get("averageScore")).doubleValue())
-                    .bestScore(((Number) row.get("bestScore")).doubleValue()).build();
-            responses.add(response);
-        }
-
-        return responses;
+    public List<SubjectStatsResponse> getSubjectStats() {
+        return historyRepository.getSubjectStats().stream()
+                .map(row -> SubjectStatsResponse.builder()
+                        .subjectId((Long) row.get("subjectId"))
+                        .subjectName((String) row.get("subjectName"))
+                        .totalExams(((Number) row.get("totalExams")).intValue())
+                        .totalQuestions(((Number) row.get("totalQuestions")).intValue())
+                        .correctAnswers(((Number) row.get("correctAnswers")).intValue())
+                        .averageScore(((Number) row.get("averageScore")).doubleValue())
+                        .bestScore(((Number) row.get("bestScore")).doubleValue())
+                        .build())
+                .toList();
     }
 
     private HistorySummaryResponse.RecentExamDto toRecentExamDto (Exam exam) {
@@ -107,57 +106,68 @@ public class GetHistoryService implements GetHistoryUseCase {
                 .finishedAt(exam.getFinishedAt()).timeSpentInMinutes(calculateTimeSpent(exam)).questions(null).build();
     }
 
-    private List<HistoryExamResponse.QuestionDetailDto> buildQuestionDetails (Exam exam, List<UserAnswer> userAnswers) {
+    private List<HistoryExamResponse.QuestionDetailDto> buildQuestionDetails(Exam exam, List<UserAnswer> userAnswers) {
         if (exam == null || exam.getQuestions() == null) {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        List<HistoryExamResponse.QuestionDetailDto> questionDetails = new ArrayList<>();
+        return exam.getQuestions().stream()
+                .map(examQuestion -> {
+                    Question question = examQuestion.question();
+                    if (question == null) return null;
 
-        for (ExamQuestion examQuestion : exam.getQuestions()) {
-            Question question = examQuestion.getQuestion();
-            if (question == null)
-                continue;
+                    UserAnswer userAnswer = userAnswers.stream()
+                            .filter(ua -> ua.questionId().equals(question.id()))
+                            .findFirst()
+                            .orElse(null);
 
-            UserAnswer userAnswer = userAnswers.stream().filter(ua -> ua.getQuestionId().equals(question.getId()))
-                    .findFirst().orElse(null);
+                    List<String> yourAnswer = getYourAnswerList(question, userAnswer);
+                    List<String> correctAnswer = getCorrectAnswerList(question);
+                    boolean isCorrect = userAnswer != null && userAnswer.correct();
 
-            List<String> yourAnswer = getYourAnswerList(question, userAnswer);
-            List<String> correctAnswer = getCorrectAnswerList(question);
-            boolean isCorrect = userAnswer != null && userAnswer.isCorrect();
+                    List<HistoryExamResponse.AlternativeDto> alternatives = question.alternatives().stream()
+                            .map(alt -> HistoryExamResponse.AlternativeDto.builder()
+                                    .alternativeId(alt.id())
+                                    .description(alt.description())
+                                    .isCorrect(alt.correct())
+                                    .build())
+                            .toList();
 
-            List<HistoryExamResponse.AlternativeDto> alternatives = question.getAlternatives().stream()
-                    .map(alt -> HistoryExamResponse.AlternativeDto.builder().alternativeId(alt.getId())
-                            .description(alt.getDescription()).isCorrect(alt.isCorrect()).build())
-                    .collect(Collectors.toList());
-
-            questionDetails.add(HistoryExamResponse.QuestionDetailDto.builder().number(examQuestion.getOrderNumber())
-                    .questionId(question.getId()).statement(question.getStatement()).alternatives(alternatives)
-                    .yourAnswer(yourAnswer).correctAnswer(correctAnswer).isCorrect(isCorrect)
-                    .questionType(question.getType().getDescription()).build());
-        }
-
-        return questionDetails;
+                    return HistoryExamResponse.QuestionDetailDto.builder()
+                            .number(examQuestion.orderNumber())
+                            .questionId(question.id())
+                            .statement(question.statement())
+                            .alternatives(alternatives)
+                            .yourAnswer(yourAnswer)
+                            .correctAnswer(correctAnswer)
+                            .isCorrect(isCorrect)
+                            .questionType(question.type().getDescription())
+                            .build();
+                })
+                .filter(Objects::nonNull)
+                .toList();
     }
 
-    private List<String> getYourAnswerList (Question question, UserAnswer userAnswer) {
-        if (question == null)
-            return List.of("Not answered");
-        if (userAnswer == null || userAnswer.getAlternativeIds() == null || userAnswer.getAlternativeIds().isEmpty()) {
+    private List<String> getYourAnswerList(Question question, UserAnswer userAnswer) {
+        if (question == null || userAnswer == null || userAnswer.alternativeIds() == null || userAnswer.alternativeIds().isEmpty()) {
             return List.of("Not answered");
         }
 
-        return question.getAlternatives().stream().filter(alt -> userAnswer.getAlternativeIds().contains(alt.getId()))
-                .map(Alternative::getDescription).collect(Collectors.toList());
+        return question.alternatives().stream()
+                .filter(alt -> userAnswer.alternativeIds().contains(alt.id()))
+                .map(Alternative::description)
+                .toList();
     }
 
-    private List<String> getCorrectAnswerList (Question question) {
-        if (question == null || question.getAlternatives() == null) {
+    private List<String> getCorrectAnswerList(Question question) {
+        if (question == null || question.alternatives() == null) {
             return List.of("No correct answer");
         }
 
-        List<String> correctDescriptions = question.getAlternatives().stream().filter(Alternative::isCorrect)
-                .map(Alternative::getDescription).collect(Collectors.toList());
+        List<String> correctDescriptions = question.alternatives().stream()
+                .filter(Alternative::correct)
+                .map(Alternative::description)
+                .toList();
 
         return correctDescriptions.isEmpty() ? List.of("No correct answer") : correctDescriptions;
     }
